--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       XPACK_MONITORING_ELASTICSEARCH_HOSTS: "elasticsearch:9200"
       XPACK_MONITORING_ENABLED: "true"
     volumes:
-      - ./logstash/alerts-api:/usr/share/logstash/alerts-api:ro
+      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
     networks:
       - internal
     restart: unless-stopped
