--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,7 +1,7 @@
 input {
     tcp {
         port => 5000
-        type => syslog
+        type => "alerts-api"
         codec => json_lines
     }
 }
@@ -20,9 +20,12 @@ output {
         codec => rubydebug
     }
     elasticsearch {
-        hosts => [ "${XPACK_MONITORING_ELASTICSEARCH_HOSTS}" ]
-        user => "${XPACK_MONITORING_ELASTICSEARCH_USERNAME}"
-        password => "${XPACK_MONITORING_ELASTICSEARCH_PASSWORD}"
-        index => "logstash-%{+YYYY.MM.dd}"
+        if [type] == "alerts-api" {
+            hosts => [ "${XPACK_MONITORING_ELASTICSEARCH_HOSTS}" ]
+            user => "${XPACK_MONITORING_ELASTICSEARCH_USERNAME}"
+            password => "${XPACK_MONITORING_ELASTICSEARCH_PASSWORD}"
+            index => "logstash-%{+YYYY.MM.dd}"
+        }
+        
     }
 }
