CReating alerts-api index in logstash

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -24,7 +24,7 @@ output {
             hosts => [ "${XPACK_MONITORING_ELASTICSEARCH_HOSTS}" ]
             user => "${XPACK_MONITORING_ELASTICSEARCH_USERNAME}"
             password => "${XPACK_MONITORING_ELASTICSEARCH_PASSWORD}"
-            index => "logstash-%{+YYYY.MM.dd}"
+            index => "alerts-api-%{+YYYY.MM.dd}"
         }   
     }
 }
