Adding logs-api type in logstash

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -4,6 +4,12 @@ input {
         type => "alerts-api"
         codec => json_lines
     }
+
+    tcp {
+        port => 5001
+        type => "logs-api"
+        codec => json_lines
+    }
 }
 
 filter {
@@ -26,5 +32,12 @@ output {
             password => "${XPACK_MONITORING_ELASTICSEARCH_PASSWORD}"
             index => "alerts-api-%{+YYYY.MM.dd}"
         }   
+    } else if [type] == "logs-api" {
+        elasticsearch {
+            hosts => [ "${XPACK_MONITORING_ELASTICSEARCH_HOSTS}" ]
+            user => "${XPACK_MONITORING_ELASTICSEARCH_USERNAME}"
+            password => "${XPACK_MONITORING_ELASTICSEARCH_PASSWORD}"
+            index => "logs-api-%{+YYYY.MM.dd}"
+        }  
     }
 }
