--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -10,6 +10,12 @@ input {
         type => "logs-api"
         codec => json_lines
     }
+
+    tcp {
+        port => 5002
+        type => "notifications-api"
+        codec => json_lines
+    }
 }
 
 filter {
@@ -39,5 +45,12 @@ output {
             password => "${XPACK_MONITORING_ELASTICSEARCH_PASSWORD}"
             index => "logs-api-%{+YYYY.MM.dd}"
         }  
+    } else if [type] == "notifications-api" {
+        elasticsearch {
+            hosts => [ "${XPACK_MONITORING_ELASTICSEARCH_HOSTS}" ]
+            user => "${XPACK_MONITORING_ELASTICSEARCH_USERNAME}"
+            password => "${XPACK_MONITORING_ELASTICSEARCH_PASSWORD}"
+            index => "notifications-api-%{+YYYY.MM.dd}"
+        } 
     }
 }
